# sushi

./: .Rhistory  .gitignore  CBnormalize.R  DESCRIPTION  Dockerfile  NAMESPACE  README.md  bcl2fastq.sh  collapse_replicates.R  compute_l2fc.R  diff.txt  fastq2readcount.R  filter_counts.R  generate_biomarkers.R  pyproject.toml  replicate_QC.R
R/: DEPRECATED_filter_raw_reads.R  DEPRECATED_write_df_from_fastq.R  QC_images.R  collapse_bio_reps.R  collapse_counts.R  collapse_replicates.R  collate_fastq_reads.R  compute_l2fc.R  fastq2readcount.R  filter_raw_reads.R  generate_biomarkers.R  normalize.R  replicate_QC.R  run_DE.R  write_df_from_fastq.R
docker/: Dockerfile  aws_batch.sh  build_docker.sh  docker_push_tags.sh  docker_run.sh  install_packages.R
docker_base/: .dockerignore  Dockerfile  README.md  build_docker.sh  install_packages.R  install_sushi_packages.R  install_sushi_packages2.R
docker_podman/: Dockerfile  docker_push_tags.sh  install_packages.R
documentation/: Sushi file column name description for collaborators.xlsx  vignette_and_tutorial.Rmd  vignette_and_tutorial.html
man/: QC_images.Rd  collapse_counts.Rd  compute_l2fc.Rd  filter_raw_reads.Rd  generate_biomarkers.Rd  normalize.Rd  run_DE.Rd  write_df_from_fastq.Rd
podman/: Dockerfile  install_packages.R
remove_data/: Dockerfile  README.md  aws_batch.sh  main.py  run_docker.sh
scripts/: CBnormalize.R  CBnormalize.sh  EPS_QC.R  Jenkinsfile  bcl2fastq.sh  biomarker.R  biomarker.sh  call_run_DE.R  cellDB_metadata.R  change_permissions.sh  collapse_replicates.R  collapse_replicates.sh  eps_qc.sh  (+34 more)
(+126 files in other folders)
